@@ -31,6 +31,7 @@ import com.nimbusds.jwt.SignedJWT;
 import com.zaxxer.hikari.HikariDataSource;
 import com.zaxxer.hikari.HikariPoolMXBean;
 import org.apache.commons.lang3.StringUtils;
+import org.jspecify.annotations.NonNull;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -42,7 +43,9 @@ import org.springframework.cache.CacheManager;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.ResultActions;
 
 import javax.sql.DataSource;
 import java.time.Instant;
@@ -83,12 +86,10 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
     private static final List<UUID> DEFAULT_REQUEST_OBJECT_SOURCE = List.of(REQUEST_ID_SECURED, REQUEST_ID_SDJWT_RESPONSE_ENCRYPTED);
 
     @Autowired
-    CacheManager cacheManager;
-    @Autowired
     private MockMvc mock;
     @Autowired
     private ManagementRepository managementEntityRepository;
-    @Autowired
+    @MockitoSpyBean
     private ApplicationProperties applicationProperties;
     @Autowired
     private VerificationProperties verificationProperties;
@@ -98,6 +99,10 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
     private DidResolverFacade didResolverFacade;
     @MockitoBean
     private StatusListResolverAdapter mockedStatusListResolverAdapter;
+
+    private final String clientId =  "did:example:12345";
+    private final String prefix = "decentralized_identifier";
+    private final String clientIdWithPrefix = prefix + ":" + clientId;
 
     private static void assertDcqlIsComplete(JWTClaimsSet claims) {
         var dcqlQuery = (LinkedTreeMap) claims.getClaim("dcql_query");
@@ -118,15 +123,13 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
 
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
         var sdJWT = emulator.createSDJWTMock();
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_EXPIRED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", vpToken))
+        postVerificationResponse(REQUEST_ID_EXPIRED, vpToken, REQUEST_ID_EXPIRED)
                 .andExpect(status().isBadRequest());
     }
 
@@ -134,7 +137,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
     void shouldFailOnNotAcceptedIssuer() throws Exception {
         SDJWTCredentialMock emulator = new SDJWTCredentialMock("suspicious_issuer_id", "suspicious_issuer_id#key-1");
         var sdJWT = emulator.createSDJWTMock();
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -142,9 +145,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("error_description").value(containsString("Issuer not in list of accepted issuers")));
     }
@@ -156,7 +157,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
     void shouldSucceedOnNoAcceptedIssuers() throws Exception {
         SDJWTCredentialMock emulator = new SDJWTCredentialMock("some_issuer_id", "some_issuer_id#key-1");
         var sdJWT = emulator.createSDJWTMock();
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -167,6 +168,9 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
 
     @Test
     void shouldGetRequestObject() throws Exception {
+        var prefix = "prefix";
+        var expectedClientIdWithPrefix = prefix + ":" +  applicationProperties.getClientId();
+        when(applicationProperties.getClientIdPrefix()).thenReturn(prefix);
         mock.perform(get(String.format("/oid4vp/api/request-object/%s", REQUEST_ID_SECURED))
                         .accept("application/oauth-authz-req+jwt"))
                 .andExpect(status().isOk())
@@ -178,8 +182,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
 
                     // checking claims
                     var claims = responseJwt.getJWTClaimsSet();
-                    assertThat(claims.getStringClaim("client_id")).isEqualTo(applicationProperties.getClientId());
-                    assertThat(claims.getStringClaim("client_id_scheme")).isEqualTo(applicationProperties.getClientIdScheme());
+                    assertThat(claims.getStringClaim("client_id")).isEqualTo(expectedClientIdWithPrefix);
                     assertThat(claims.getStringClaim("response_type")).isEqualTo("vp_token");
                     assertThat(claims.getStringClaim("response_mode")).isEqualTo("direct_post");
                     assertThat(claims.getStringClaim("nonce")).isNotNull();
@@ -192,8 +195,22 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
     }
 
     @Test
+    void shouldGetRequestObject_withoutClientIdPrefix() throws Exception {
+        when(applicationProperties.getClientIdPrefix()).thenReturn(null);
+        mock.perform(get(String.format("/oid4vp/api/request-object/%s", REQUEST_ID_SECURED))
+                        .accept("application/oauth-authz-req+jwt"))
+                .andExpect(status().isOk())
+                .andDo(result -> {
+                    var responseJwt = SignedJWT.parse(result.getResponse().getContentAsString());
+                    var claims = responseJwt.getJWTClaimsSet();
+                    assertThat(claims.getStringClaim("client_id")).isEqualTo(applicationProperties.getClientId());
+                });
+    }
+
+    @Test
     void shouldAcceptRefusalIWithValidErrorType() throws Exception {
         mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
+                        .formField("state", REQUEST_ID_SECURED.toString())
                         .formField("error", "vp_formats_not_supported")
                         .formField("error_description", "I really just dont want to"))
                 .andExpect(status().isOk());
@@ -227,7 +244,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         // GIVEN
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
         var sdJWT = emulator.createSDJWTMock();
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -245,9 +262,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         ResponseSpecification responseSpecification = managementEntity.getResponseSpecification();
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
         if (responseSpecification.getResponseModeType() == ResponseModeType.DIRECT_POST) {
-            mock.perform(post(String.format(responseDataUriFormat, requestObjectId))
-                            .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                            .formField("vp_token", dcqlVpToken))
+            postVerificationResponse(requestObjectId, dcqlVpToken, requestObjectId)
                     .andExpect(status().isOk());
         } else if (responseSpecification.getResponseModeType() == ResponseModeType.DIRECT_POST_JWT) {
             // JWKS & encryptionMethod are normally provided in Request Object
@@ -263,6 +278,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
             jweObject.encrypt(new ECDHEncrypter(publicKey));
             mock.perform(post(String.format(responseDataUriFormat, requestObjectId))
                             .contentType(APPLICATION_FORM_URLENCODED_VALUE)
+                            .formField("state", requestObjectId.toString())
                             .formField("response", jweObject.serialize()))
                     .andExpect(status().isOk());
         }
@@ -287,7 +303,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
                 );
 
         var sdJWT = emulator.createSDJWTMock(statusListIndex);
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -295,9 +311,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isOk()).andReturn();
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_SECURED).orElseThrow();
@@ -323,7 +337,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
 
         var sd = Arrays.copyOfRange(parts, 1, parts.length - 2);
         var newCred = parts[0] + SdJwt.JWT_PART_DELINEATION_CHARACTER + StringUtils.join(sd, SdJwt.JWT_PART_DELINEATION_CHARACTER) + SdJwt.JWT_PART_DELINEATION_CHARACTER;
-        var vpToken = emulator.addKeyBindingProof(newCred, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(newCred, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         // mock did resolver response, so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -331,9 +345,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest()).andReturn();
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_SECURED).orElseThrow();
@@ -356,7 +368,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
                 );
 
         var sdJwt = emulator.createSDJWTMock(0);
-        var boundSdJwt = emulator.addKeyBindingProof(sdJwt, NONCE_SD_JWT_SQL, "did:example:12345");
+        var boundSdJwt = emulator.addKeyBindingProof(sdJwt, NONCE_SD_JWT_SQL, "decentralized_identifier:did:example:12345");
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -365,10 +377,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var submissionData = objectMapper.writeValueAsString(vpTokenMap);
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_SECURED, submissionData, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.error_code").value("credential_revoked"));
 
@@ -389,7 +398,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var newCred = parts[0] + SdJwt.JWT_PART_DELINEATION_CHARACTER
                 + StringUtils.join(sd, SdJwt.JWT_PART_DELINEATION_CHARACTER) + SdJwt.JWT_PART_DELINEATION_CHARACTER
                 + StringUtils.join(sd, SdJwt.JWT_PART_DELINEATION_CHARACTER) + SdJwt.JWT_PART_DELINEATION_CHARACTER;
-        var vpToken = emulator.addKeyBindingProof(newCred, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(newCred, NONCE_SD_JWT_SQL, "decentralized_identifier:did:example:12345");
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -397,9 +406,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.error").value("invalid_transaction_data"))
                 .andExpect(jsonPath("$.error_description").value("Request contains non-distinct disclosures"));
@@ -417,12 +424,10 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
 
         var sdJWT = emulator.createSDJWTMock();
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
         mockDidResolverResponse(emulator);
 
-        var response = mock.perform(post(String.format(responseDataUriFormat, REQUEST_DIFFERENT_KB_ALGS))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", vpToken))
+        var response = postVerificationResponse(REQUEST_DIFFERENT_KB_ALGS, vpToken, REQUEST_DIFFERENT_KB_ALGS)
                 .andExpect(status().isBadRequest())
                 .andReturn();
 
@@ -442,7 +447,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
 
         var sdJWT = emulator.createSDJWTMock(Instant.now().plus(7, ChronoUnit.DAYS).getEpochSecond());
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -450,9 +455,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("error").value("invalid_transaction_data"))
                 .andExpect(jsonPath("error_description").value("Could not verify JWT credential is not yet valid"));
@@ -468,7 +471,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
 
         var sdJWT = emulator.createSDJWTMock(null, Instant.now().minus(10, ChronoUnit.MINUTES).getEpochSecond());
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
 
         // mock did resolver response so we get a valid public key for the issuer
@@ -477,9 +480,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("error").value("invalid_transaction_data"))
                 .andExpect(jsonPath("error_description").value("Could not verify JWT credential is expired"));
@@ -496,7 +497,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var sdJWT = emulator.createSDJWTMock();
         var additionalDisclosure = new Disclosure("additional", "definetly_wrong");
         var newCred = sdJWT + additionalDisclosure + SdJwt.JWT_PART_DELINEATION_CHARACTER;
-        var vpToken = emulator.addKeyBindingProof(newCred, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(newCred, NONCE_SD_JWT_SQL, "decentralized_identifier:did:example:12345");
 
 
         // mock did resolver response so we get a valid public key for the issuer
@@ -505,9 +506,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("error").value("invalid_transaction_data"))
                 .andExpect(jsonPath("error_description").value("Unused disclosures detected"));
@@ -522,7 +521,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         // GIVEN
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
         var sdJWT = emulator.createSDJWTMock();
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "decentralized_identifier:did:example:12345");
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -540,7 +539,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         // GIVEN
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
         var sdJWT = emulator.createSDJWTMock(true, credentialFormat);
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "decentralized_identifier:did:example:12345");
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -569,7 +568,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
 
         var sd = Arrays.copyOfRange(parts, 1, parts.length - 2);
         var newCred = parts[0] + SdJwt.JWT_PART_DELINEATION_CHARACTER + StringUtils.join(sd, SdJwt.JWT_PART_DELINEATION_CHARACTER) + SdJwt.JWT_PART_DELINEATION_CHARACTER;
-        var vpToken = emulator.addKeyBindingProof(newCred, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(newCred, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -577,9 +576,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("error").value("invalid_transaction_data"))
                 .andExpect(jsonPath("error_description").value("Failed to verify JWT: Issuer public key does not match signature!"));
@@ -591,7 +588,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         // GIVEN
         SDJWTCredentialMock emulator = new SDJWTCredentialMock(new ECKeyGenerator(Curve.P_256).generate());
         var sdJWT = emulator.createSDJWTMock();
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
@@ -599,9 +596,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("error").value("invalid_transaction_data"))
                 .andExpect(jsonPath("error_description").value("Signature mismatch"));
@@ -621,15 +616,13 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
                 );
 
         var sdJWT = emulator.createSDJWTMock(100);
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
         mockDidResolverResponse(emulator);
 
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("error").value("invalid_transaction_data"))
                 .andExpect(jsonPath("error_description", containsString("The VC cannot be validated as the remote list does not contain this VC!")))
@@ -651,15 +644,13 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
                 .thenThrow(new StatusListMaxSizeExceededException(expectedErrorMesssage));
 
         var sdJWT = emulator.createSDJWTMock(100);
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix);
         mockDidResolverResponse(emulator);
 
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("error").value("invalid_transaction_data"))
                 .andExpect(jsonPath("error_description", containsString(expectedErrorMesssage)))
@@ -678,7 +669,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var sdJWT = emulator.createSDJWTMock();
         // Use window + 10s to reliably be outside the acceptable proof time window
         // (boundary at exactly window seconds is not considered expired: isBefore is strict)
-        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345",
+        var vpToken = emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, clientIdWithPrefix,
                 Instant.now().minusSeconds(verificationProperties.getAcceptableProofTimeWindowSeconds() + 10).getEpochSecond(),
                 "kb+jwt");
 
@@ -688,9 +679,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var dcqlVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .formField("vp_token", dcqlVpToken))
+        postVerificationResponse(REQUEST_ID_SECURED, dcqlVpToken, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_SECURED).orElseThrow();
@@ -703,16 +692,8 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         mock.perform(get("/oid4vp/api/openid-client-metadata.json")
                         .contentType(MediaType.APPLICATION_JSON_VALUE))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.client_id").value(applicationProperties.getClientId()))
+                .andExpect(jsonPath("$.client_id").value(applicationProperties.getClientIdPrefix() + ":" +  applicationProperties.getClientId()))
                 .andExpect(jsonPath("$.vp_formats.jwt_vp.alg").value(JWSAlgorithm.ES256.getName()));
-    }
-
-    private String createVpToken() throws Exception {
-        SDJWTCredentialMock emulator = new SDJWTCredentialMock(new ECKeyGenerator(Curve.P_256).generate());
-        var sdJWT = emulator.createSDJWTMock();
-        mockDidResolverResponse(emulator);
-
-        return emulator.addKeyBindingProof(sdJWT, NONCE_SD_JWT_SQL, "did:example:12345");
     }
 
     private void mockDidResolverResponse(SDJWTCredentialMock sdjwt) {
@@ -747,16 +728,13 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
                 + StringUtils.join(discList, SdJwt.JWT_PART_DELINEATION_CHARACTER)
                 + SdJwt.JWT_PART_DELINEATION_CHARACTER;
 
-        var sdJwt = emulator.addKeyBindingProof(rebuiltSdJwt, NONCE_SD_JWT_SQL, applicationProperties.getClientId());
+        var sdJwt = emulator.addKeyBindingProof(rebuiltSdJwt, NONCE_SD_JWT_SQL,  applicationProperties.getClientIdWithPrefix());
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(sdJwt));
 
         // remove unused list disclosures
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_SECURED, submissionData, REQUEST_ID_SECURED)
                 .andExpect(status().isOk());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_SECURED).orElseThrow();
@@ -775,16 +753,13 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         // GIVEN
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
         var unsignedSdJwt = emulator.createSDJWTMock();
-        var sdJwt = emulator.addKeyBindingProof(unsignedSdJwt, NONCE_SD_JWT_SQL, applicationProperties.getClientId());
+        var sdJwt = emulator.addKeyBindingProof(unsignedSdJwt, NONCE_SD_JWT_SQL,  applicationProperties.getClientIdWithPrefix());
 
         mockDidResolverResponse(emulator);
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(sdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING, submissionData, REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING)
                 .andExpect(status().isOk());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING).orElseThrow();
@@ -796,16 +771,13 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         // GIVEN
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
         var unsignedSdJwt = emulator.createNestedSDJWTMock();
-        var sdJwt = emulator.addKeyBindingProof(unsignedSdJwt, NONCE_SD_JWT_SQL, applicationProperties.getClientId());
+        var sdJwt = emulator.addKeyBindingProof(unsignedSdJwt, NONCE_SD_JWT_SQL, applicationProperties.getClientIdWithPrefix());
 
         mockDidResolverResponse(emulator);
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(sdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_NESTED_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_NESTED_SECURED, submissionData, REQUEST_ID_NESTED_SECURED)
                 .andExpect(status().isOk());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_NESTED_SECURED).orElseThrow();
@@ -835,11 +807,12 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
                 }
                 """.formatted(dcqlCredentialId, SDJWTCredentialMock.DEFAULT_VCT);
 
-        managementEntityRepository.save(Management.builder()
+        var mgmt = managementEntityRepository.save(Management.builder()
                 .id(dcqlCredentialId)
                 .jwtSecuredAuthorizationRequest(false)
                 .requestNonce(NONCE_SD_JWT_SQL)
                 .state(PENDING)
+                .oauthState(UUID.randomUUID().toString())
                 .walletResponse(null)
                 .expirationInSeconds(86400)
                 .expiresAt(4070908800000L)
@@ -868,16 +841,13 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
                 .concat(used.stream().map(disc -> "~" + disc.toString()).reduce("", String::concat))
                 .concat("~");
 
-        var sdJwt = emulator.addKeyBindingProof(test, NONCE_SD_JWT_SQL, applicationProperties.getClientId());
+        var sdJwt = emulator.addKeyBindingProof(test, NONCE_SD_JWT_SQL,  applicationProperties.getClientIdWithPrefix());
 
         mockDidResolverResponse(emulator);
         var vpToken = Map.of(dcqlCredentialId, List.of(sdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, dcqlCredentialId))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(dcqlCredentialId, submissionData, UUID.fromString(mgmt.getOauthState()))
                 .andExpect(status().isOk());
     }
 
@@ -886,17 +856,14 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         // GIVEN
         SDJWTCredentialMock emulator = new SDJWTCredentialMock();
         var unsignedSdJwt = emulator.createSDJWTMock();
-        var sdJwt = emulator.addKeyBindingProof(unsignedSdJwt, NONCE_SD_JWT_SQL, applicationProperties.getClientId());
+        var sdJwt = emulator.addKeyBindingProof(unsignedSdJwt, NONCE_SD_JWT_SQL,  applicationProperties.getClientIdWithPrefix());
 
         // mock did resolver response so we get a valid public key for the issuer
         mockDidResolverResponse(emulator);
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(sdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_WITH_DCQL_AND_OPTIONAL_HOLDER_BINDING))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_WITH_DCQL_AND_OPTIONAL_HOLDER_BINDING, submissionData, REQUEST_ID_WITH_DCQL_AND_OPTIONAL_HOLDER_BINDING)
                 .andExpect(status().isOk());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_WITH_DCQL_AND_OPTIONAL_HOLDER_BINDING).orElseThrow();
@@ -914,10 +881,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(unsignedSdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_WITH_DCQL_AND_OPTIONAL_HOLDER_BINDING))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_WITH_DCQL_AND_OPTIONAL_HOLDER_BINDING, submissionData, REQUEST_ID_WITH_DCQL_AND_OPTIONAL_HOLDER_BINDING)
                 .andExpect(status().isOk());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_WITH_DCQL_AND_OPTIONAL_HOLDER_BINDING).orElseThrow();
@@ -933,10 +897,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(unsignedSdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING, submissionData, REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING)
                 .andExpect(status().isBadRequest());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING).orElseThrow();
@@ -955,10 +916,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(sdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING, submissionData, REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING)
                 .andExpect(status().isBadRequest());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING).orElseThrow();
@@ -975,10 +933,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(unsignedSdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING, submissionData, REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING)
                 .andExpect(status().isBadRequest());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_WITH_DCQL_AND_HOLDER_BINDING).orElseThrow();
@@ -998,11 +953,8 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(sdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
-                .andExpect(jsonPath("$.error_description").value("Holder Binding audience mismatch. Actual: 'http://localhost:8080'. Expected: did:example:12345"))
+        postVerificationResponse(REQUEST_ID_SECURED, submissionData, REQUEST_ID_SECURED)
+                .andExpect(jsonPath("$.error_description").value("Holder Binding audience mismatch. Actual: 'http://localhost:8080'. Expected: %s".formatted(clientIdWithPrefix)))
                 .andExpect(jsonPath("$.error_code").value("holder_binding_mismatch"))
                 .andExpect(status().isBadRequest());
     }
@@ -1019,10 +971,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, sdJwt);
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_SECURED, submissionData, REQUEST_ID_SECURED)
                 .andExpect(status().isBadRequest());
 
         var managementEntity = managementEntityRepository.findById(REQUEST_ID_SECURED).orElseThrow();
@@ -1043,10 +992,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(sdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_SECURED, submissionData, REQUEST_ID_SECURED)
                 .andExpect(status().is4xxClientError())
                 .andExpect(jsonPath("$.error").value("invalid_transaction_data"))
                 .andExpect(jsonPath("$.error_code").value("holder_binding_mismatch"));
@@ -1073,10 +1019,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         var vpToken = Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(sdJwt));
         var submissionData = objectMapper.writeValueAsString(vpToken);
         // WHEN / THEN
-        mock.perform(post(String.format(responseDataUriFormat, REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("vp_token", submissionData))
+        postVerificationResponse(REQUEST_ID_SECURED, submissionData, REQUEST_ID_SECURED)
                 .andExpect(status().is4xxClientError())
                 .andExpect(jsonPath("$.error").value("invalid_transaction_data"));
 
@@ -1092,10 +1035,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         String encryptedResponse = "eyJhbGciOiJSU0ExXzUiLCJlbmMiOiJBMjU2R0NNIiwidHlwIjoiSldFIn0...";
 
         // WHEN / THEN
-        mock.perform(post(String.format("/oid4vp/api/request-object/%s/response-data", REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("response", encryptedResponse))
+        postVerificationResponse(REQUEST_ID_SECURED, encryptedResponse, REQUEST_ID_SECURED)
                 .andExpect(status().is4xxClientError());
 
         // Verify that the management entity remains in pending state since the exception is thrown early
@@ -1109,11 +1049,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         String errorDescription = "User declined the verification request";
 
         // WHEN / THEN
-        mock.perform(post(String.format("/oid4vp/api/request-object/%s/response-data", REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("error", "access_denied")
-                        .formField("error_description", errorDescription))
+        postVerificationErrorResponse(REQUEST_ID_SECURED, REQUEST_ID_SECURED, "access_denied", errorDescription)
                 .andExpect(status().isOk());
 
         // Verify that the management entity is marked as failed due to client rejection
@@ -1128,6 +1064,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         mock.perform(post(String.format("/oid4vp/api/request-object/%s/response-data", REQUEST_ID_SECURED))
                         .contentType(APPLICATION_FORM_URLENCODED_VALUE)
                         .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
+                        .formField("state", REQUEST_ID_SECURED.toString())
                         .formField("error", "client_rejected"))
                 .andExpect(status().isOk());
 
@@ -1139,11 +1076,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
     @Test
     void shouldHandleClientRejectionWithEmptyErrorDescription() throws Exception {
         // WHEN / THEN
-        mock.perform(post(String.format("/oid4vp/api/request-object/%s/response-data", REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("error", "vp_formats_not_supported")
-                        .formField("error_description", ""))
+        postVerificationErrorResponse(REQUEST_ID_SECURED, REQUEST_ID_SECURED, "vp_formats_not_supported", "")
                 .andExpect(status().isOk());
 
         // Verify that the management entity is marked as failed due to client rejection
@@ -1155,11 +1088,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
     @Test
     void shouldFailClientRejectionOnExpiredRequest() throws Exception {
         // WHEN / THEN
-        mock.perform(post(String.format("/oid4vp/api/request-object/%s/response-data", REQUEST_ID_EXPIRED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("error", "access_denied")
-                        .formField("error_description", "User cancelled"))
+        postVerificationErrorResponse(REQUEST_ID_EXPIRED, REQUEST_ID_EXPIRED, "access_denied", "User cancelled")
                 .andExpect(status().isGone());
 
         // Verify that the management entity state remains unchanged
@@ -1170,11 +1099,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
     @Test
     void shouldFailClientRejectionWithInvalidErrorType() throws Exception {
         // WHEN / THEN
-        mock.perform(post(String.format("/oid4vp/api/request-object/%s/response-data", REQUEST_ID_SECURED))
-                        .contentType(APPLICATION_FORM_URLENCODED_VALUE)
-                        .header("SWIYU-API-Version", VPApiVersion.V1.getValue())
-                        .formField("error", "invalid_error_type")
-                        .formField("error_description", "Some description"))
+        postVerificationErrorResponse(REQUEST_ID_SECURED, REQUEST_ID_SECURED, "invalid_error_type", "Some description")
                 .andExpect(status().isBadRequest());
 
         // Verify that the management entity remains in pending state
@@ -1195,8 +1120,6 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
 
                     // checking claims
                     var claims = responseJwt.getJWTClaimsSet();
-                    assertThat(claims.getStringClaim("client_id")).isEqualTo(applicationProperties.getClientId());
-                    assertThat(claims.getStringClaim("client_id_scheme")).isEqualTo(applicationProperties.getClientIdScheme());
                     assertThat(claims.getStringClaim("response_type")).isEqualTo("vp_token");
                     assertThat(claims.getStringClaim("response_mode")).isEqualTo("direct_post.jwt");
                     assertThat(claims.getStringClaim("nonce")).isNotNull();
@@ -1222,7 +1145,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
 
         final SDJWTCredentialMock emulator = new SDJWTCredentialMock();
         final String sdJwt = emulator.createSDJWTMock();
-        String vpToken = emulator.addKeyBindingProof(sdJwt, NONCE_SD_JWT_SQL, "did:example:12345");
+        String vpToken = emulator.addKeyBindingProof(sdJwt, NONCE_SD_JWT_SQL, clientIdWithPrefix);
 
         final String finalVpToken = objectMapper.writeValueAsString(Map.of(DEFAULT_DCQL_CREDENTIAL_ID, List.of(vpToken)));
 
@@ -1244,11 +1167,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         final ExecutorService executor = Executors.newSingleThreadExecutor();
         executor.submit(() -> {
             try {
-                mock.perform(
-                        post(String.format("/oid4vp/api/request-object/%s/response-data", REQUEST_ID_SECURED))
-                                .contentType(MediaType.APPLICATION_FORM_URLENCODED)
-                                .formField("vp_token", finalVpToken)
-                );
+                postVerificationResponse(REQUEST_ID_SECURED, finalVpToken, REQUEST_ID_SECURED);
             } catch (Exception ignored) {}
         });
 
@@ -1270,7 +1189,7 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         final int concurrentRequests = 5;
         final SDJWTCredentialMock emulator = new SDJWTCredentialMock();
         final String sdJwt = emulator.createSDJWTMock();
-        String vpToken = emulator.addKeyBindingProof(sdJwt, NONCE_SD_JWT_SQL, "did:example:12345");
+        String vpToken = emulator.addKeyBindingProof(sdJwt, NONCE_SD_JWT_SQL, clientIdWithPrefix);
         vpToken = SDJWTCredentialMock.createMultipleVPTokenMock(vpToken);
 
 
@@ -1320,5 +1239,20 @@ class VerificationControllerIT extends BaseVerificationControllerTest {
         allowDidToFinish.countDown();
         executor.shutdown();
         executor.awaitTermination(5, TimeUnit.SECONDS);
+    }
+
+    private @NonNull ResultActions postVerificationResponse(UUID requestObjectId, String dcqlVpToken, UUID state) throws Exception {
+        return mock.perform(post(String.format(responseDataUriFormat, requestObjectId))
+                .contentType(APPLICATION_FORM_URLENCODED_VALUE)
+                .formField("state", state.toString())
+                .formField("vp_token", dcqlVpToken));
+    }
+
+    private @NonNull ResultActions postVerificationErrorResponse(UUID requestObjectId, UUID state, String error, String errorDescription) throws Exception {
+        return mock.perform(post(String.format("/oid4vp/api/request-object/%s/response-data", requestObjectId))
+                .contentType(APPLICATION_FORM_URLENCODED_VALUE)
+                .formField("state", state.toString())
+                .formField("error", error)
+                .formField("error_description", errorDescription));
     }
 }
